# python

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml  requirements.txt
.github/workflows/: deploy.yml
book/: _config.yml  _toc.yml  intro.md
book/content/: atgtools.py  class_and_methods.ipynb  day01.ipynb  day02.ipynb  day03.ipynb  day04.ipynb  day05.ipynb  get_codons.py  get_gc_content.py  install_packages_piplite.py  matplotlib.ipynb
book/content/data/: description.tsv
