[tool.poetry]
name = "03-jupyter-lite"
version = "0.1.0"
description = ""
authors = ["Otoniel Maya <otto94@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
jupyterlite-core = "^0.4.0"
jupyterlab = "^4.2.4"
jupyter-book = "^1.0.2"
jupyterlite-pyodide-kernel = "^0.4.1"
bqplot = "^0.12.43"
numpy = "^2.1.0"
altair = "^5.4.0"
pandas = "^2.2.2"
seaborn = "^0.13.2"
pingouin = "^0.5.4"
jupyterlab-tour = "^4.0.1"
jupyterlab-night = "^0.4.6"
jupyterlab-miami-nights = "^0.4.2"
ipywidgets = "^8.1.3"
ipyevents = "^2.0.2"
ipympl = "^0.9.4"
pyppeteer = "^2.0.0"
pyarrow = "^17.0.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
