[project]
name = "05-jupyter-lite"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12.0"
dependencies = [
    "altair>=5.5.0",
    "bqplot>=0.12.43",
    "ipyevents>=2.0.2",
    "ipympl>=0.9.4",
    "ipywidgets>=8.1.5",
    "jupyter-book>=1.0.3",
    "jupyterlab>=4.3.1",
    "jupyterlab-tour>=4.0.1",
    "jupyterlite-core>=0.4.4",
    "jupyterlite-pyodide-kernel>=0.4.4",
    "numpy>=2.1.3",
    "pandas>=2.2.3",
    "pingouin>=0.5.5",
    "pyarrow>=18.0.0",
    "seaborn>=0.13.2",
]
